# pybigdata

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: example_optimization.py
pybigdata.egg-info/: PKG-INFO  SOURCES.txt
src/pybigdata/: optimization.py
src/pybigdata.egg-info/: PKG-INFO
